# CT-CLIP

./: inference.ipynb  justfile  pyproject.toml
scripts/: run_zero_shot.py  zero_shot.py
