[project]
name = "ct-clip-project"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ct_clip",
    "huggingface-hub[cli]>=0.28.1",
    "torchio>=0.20.4",
    "transformer_maskgit",
    "typer>=0.15.1",
]

[tool.uv.sources]
ct_clip = { workspace = true }
transformer_maskgit = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/CT_CLIP",
    "packages/transformer_maskgit",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
